unpackaged/main/default/objects/Diagnostic__c/fields/AP_WCP_Provider__c.field-meta.xml
<CustomField>
    <fullName>AP_WCP_Provider__c</fullName>
    <label>AP/WCP Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wirecard</fullName>
            </value>
            <value>
                <fullName>Concardis</fullName>
            </value>
            <value>
                <fullName>Payone</fullName>
            </value>
            <value>
                <fullName>SIX</fullName>
            </value>
            <value>
                <fullName>Elavon</fullName>
            </value>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Planet MS</fullName>
            </value>
            <value>
                <fullName>Millennium BCP</fullName>
            </value>
            <value>
                <fullName>Pagaqui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>