unpackaged/main/default/objects/Diagnostic__c/fields/Backup_Solution__c.field-meta.xml
<CustomField>
    <fullName>Backup_Solution__c</fullName>
    <label>Backup Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paper Forms</fullName>
            </value>
            <value>
                <fullName>Terminal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>