unpackaged/main/default/objects/Diagnostic__c/fields/Camera_on_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Camera_on_Terminal__c</fullName>
    <label>Camera on Terminal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>