unpackaged/main/default/objects/Diagnostic__c/fields/Click_Collect_Service__c.field-meta.xml
<CustomField>
    <fullName>Click_Collect_Service__c</fullName>
    <label>Click &amp; Collect Service?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>