unpackaged/main/default/objects/Diagnostic__c/fields/CRM_Auto_fill__c.field-meta.xml
<CustomField>
    <fullName>CRM_Auto_fill__c</fullName>
    <label>CRM Auto-fill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>