unpackaged/main/default/objects/Diagnostic__c/fields/DCC__c.field-meta.xml
<CustomField>
    <fullName>DCC__c</fullName>
    <label>DCC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>