unpackaged/main/default/objects/Diagnostic__c/fields/E_Commerce_Acquirer__c.field-meta.xml
<CustomField>
    <fullName>E_Commerce_Acquirer__c</fullName>
    <label>E-Commerce Acquirer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - No Tax Free</fullName>
            </value>
            <value>
                <fullName>Yes - Tax Free</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>