unpackaged/main/default/objects/Diagnostic__c/fields/Fast_Card_Refund__c.field-meta.xml
<CustomField>
    <fullName>Fast_Card_Refund__c</fullName>
    <label>Fast Card Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>