unpackaged/main/default/objects/Diagnostic__c/fields/Flexible_Refund_Table__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Refund_Table__c</fullName>
    <label>Flexible Refund Table</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>