unpackaged/main/default/objects/Diagnostic__c/fields/Full_Vat_Refund__c.field-meta.xml
<CustomField>
    <fullName>Full_Vat_Refund__c</fullName>
    <label>Full Vat Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>