unpackaged/main/default/objects/Diagnostic__c/fields/If_Thermal_Terminal_Same_for_Payments__c.field-meta.xml
<CustomField>
    <fullName>If_Thermal_Terminal_Same_for_Payments__c</fullName>
    <label>If Thermal Terminal Same for Payments?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>