unpackaged/main/default/objects/Diagnostic__c/fields/In_Store_Gift_Card__c.field-meta.xml
<CustomField>
    <fullName>In_Store_Gift_Card__c</fullName>
    <label>In Store Gift Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>