unpackaged/main/default/objects/Diagnostic__c/fields/Instant_Alipay__c.field-meta.xml
<CustomField>
    <fullName>Instant_Alipay__c</fullName>
    <label>Instant Alipay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>