unpackaged/main/default/objects/Diagnostic__c/fields/Kiosks__c.field-meta.xml
<CustomField>
    <fullName>Kiosks__c</fullName>
    <label>Kiosks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Refund Only</fullName>
            </value>
            <value>
                <fullName>Refund Only with Cash</fullName>
            </value>
            <value>
                <fullName>Refund and Issue</fullName>
            </value>
            <value>
                <fullName>Refund and Issue with Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>