unpackaged/main/default/objects/Diagnostic__c/fields/Level_of_Info_Given_on_Tax_Free_Process__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Info_Given_on_Tax_Free_Process__c</fullName>
    <label>Level of Info Given on Tax Free Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>