unpackaged/main/default/objects/Diagnostic__c/fields/Marketing_Footfall_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Footfall_Drivers__c</fullName>
    <label>Marketing/Footfall Drivers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>