unpackaged/main/default/objects/Diagnostic__c/fields/Mobile_Tax_Free_Solution_Available__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Tax_Free_Solution_Available__c</fullName>
    <label>Mobile Tax Free Solution Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>