unpackaged/main/default/objects/Diagnostic__c/fields/Offline_Online__c.field-meta.xml
<CustomField>
    <fullName>Offline_Online__c</fullName>
    <label>Offline/Online</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>