unpackaged/main/default/objects/Diagnostic__c/fields/PSP_if_integrated__c.field-meta.xml
<CustomField>
    <fullName>PSP_if_integrated__c</fullName>
    <label>PSP if integrated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACI</fullName>
            </value>
            <value>
                <fullName>Adyen</fullName>
            </value>
            <value>
                <fullName>Anderson Zaks</fullName>
            </value>
            <value>
                <fullName>Babs Paylink</fullName>
            </value>
            <value>
                <fullName>BIC Bank</fullName>
            </value>
            <value>
                <fullName>BNL POSitivity</fullName>
            </value>
            <value>
                <fullName>B Payment</fullName>
            </value>
            <value>
                <fullName>BPI Bank</fullName>
            </value>
            <value>
                <fullName>BS Payone GmbH</fullName>
            </value>
            <value>
                <fullName>Card Complete</fullName>
            </value>
            <value>
                <fullName>CardProcess GmbH</fullName>
            </value>
            <value>
                <fullName>Cardtech Card &amp; POS Service GmbH</fullName>
            </value>
            <value>
                <fullName>CartaSi</fullName>
            </value>
            <value>
                <fullName>CCAM Bank</fullName>
            </value>
            <value>
                <fullName>CCV</fullName>
            </value>
            <value>
                <fullName>CGD Bank</fullName>
            </value>
            <value>
                <fullName>Concardis</fullName>
            </value>
            <value>
                <fullName>ČSOB</fullName>
            </value>
            <value>
                <fullName>Datacash</fullName>
            </value>
            <value>
                <fullName>Douglas Informatik &amp; Service GmbH</fullName>
            </value>
            <value>
                <fullName>Easycash</fullName>
            </value>
            <value>
                <fullName>Elavon Merchant Services</fullName>
            </value>
            <value>
                <fullName>Enactor</fullName>
            </value>
            <value>
                <fullName>EVO Payments</fullName>
            </value>
            <value>
                <fullName>Fintrax</fullName>
            </value>
            <value>
                <fullName>First Data</fullName>
            </value>
            <value>
                <fullName>FIS</fullName>
            </value>
            <value>
                <fullName>Global Payments</fullName>
            </value>
            <value>
                <fullName>Hobex</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>