unpackaged/main/default/objects/Diagnostic__c/fields/Separate_Terminal_AP_WCP__c.field-meta.xml
<CustomField>
    <fullName>Separate_Terminal_AP_WCP__c</fullName>
    <label>Separate Terminal AP/WCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>