unpackaged/main/default/objects/Diagnostic__c/fields/Standard_Refund_Rate__c.field-meta.xml
<CustomField>
    <fullName>Standard_Refund_Rate__c</fullName>
    <label>Standard Refund Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>