unpackaged/main/default/objects/Diagnostic__c/fields/Tax_Free_Services_Offered_for_C_C__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Services_Offered_for_C_C__c</fullName>
    <label>Tax Free Services Offered for C&amp;C?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>