unpackaged/main/default/objects/Diagnostic__c/fields/Tax_Free_Solution__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_Solution__c</fullName>
    <label>Tax Free Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Integrated in Till</fullName>
            </value>
            <value>
                <fullName>Web Link on Till (POL)</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>In Payment Terminal</fullName>
            </value>
            <value>
                <fullName>Vat Only Terminal</fullName>
            </value>
            <value>
                <fullName>Manual Pad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>