unpackaged/main/default/objects/Diagnostic__c/fields/Till_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Till_Vendor__c</fullName>
    <label>Till Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>123bon</fullName>
            </value>
            <value>
                <fullName>3BC SOFTWARE</fullName>
            </value>
            <value>
                <fullName>ABANQ</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>ACL-Retail</fullName>
            </value>
            <value>
                <fullName>Actosoft</fullName>
            </value>
            <value>
                <fullName>Advarics</fullName>
            </value>
            <value>
                <fullName>ALIDATA S2</fullName>
            </value>
            <value>
                <fullName>Apatyka Servis- MEDIOX</fullName>
            </value>
            <value>
                <fullName>Apito</fullName>
            </value>
            <value>
                <fullName>APTEAN</fullName>
            </value>
            <value>
                <fullName>Aptos</fullName>
            </value>
            <value>
                <fullName>ARM In House Armani</fullName>
            </value>
            <value>
                <fullName>ARTBUTLER</fullName>
            </value>
            <value>
                <fullName>AS400/MANAGEMENT COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>ASTUTO</fullName>
            </value>
            <value>
                <fullName>aTop</fullName>
            </value>
            <value>
                <fullName>AVS Apothekensoftware</fullName>
            </value>
            <value>
                <fullName>BeanStore Vision PCMS Bizeta</fullName>
            </value>
            <value>
                <fullName>BEDAV</fullName>
            </value>
            <value>
                <fullName>BeeStore Sirio Informatica</fullName>
            </value>
            <value>
                <fullName>Best Store</fullName>
            </value>
            <value>
                <fullName>Best Store Autel</fullName>
            </value>
            <value>
                <fullName>BHS</fullName>
            </value>
            <value>
                <fullName>Bizerba</fullName>
            </value>
            <value>
                <fullName>BMD</fullName>
            </value>
            <value>
                <fullName>Bonit Flexx</fullName>
            </value>
            <value>
                <fullName>BTE</fullName>
            </value>
            <value>
                <fullName>Cashline</fullName>
            </value>
            <value>
                <fullName>CASSIOPEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>