unpackaged/main/default/objects/Diagnostic__c/fields/Till_Version__c.field-meta.xml
<CustomField>
    <fullName>Till_Version__c</fullName>
    <label>Till Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aptos ONE</fullName>
            </value>
            <value>
                <fullName>CBR</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Own System</fullName>
            </value>
            <value>
                <fullName>Retail Pro/Prism</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Winshop</fullName>
            </value>
            <value>
                <fullName>Winstore</fullName>
            </value>
            <value>
                <fullName>XStore</fullName>
            </value>
            <value>
                <fullName>Y2</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>