unpackaged/main/default/objects/Diagnostic__c/fields/TOPOS_or_Tax_Off__c.field-meta.xml
<CustomField>
    <fullName>TOPOS_or_Tax_Off__c</fullName>
    <label>TOPOS or Tax Off</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>