unpackaged/main/default/objects/Diagnostic__c/fields/Training_at_Store_Level__c.field-meta.xml
<CustomField>
    <fullName>Training_at_Store_Level__c</fullName>
    <label>Training at Store Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>