unpackaged/main/default/objects/Diagnostic__c/fields/Use_Tax_Free_in_Selling_Ceremony__c.field-meta.xml
<CustomField>
    <fullName>Use_Tax_Free_in_Selling_Ceremony__c</fullName>
    <label>Use Tax Free in Selling Ceremony?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>