unpackaged/main/default/objects/Diagnostic__c/fields/VIP_Airport_Service__c.field-meta.xml
<CustomField>
    <fullName>VIP_Airport_Service__c</fullName>
    <label>VIP Airport Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>